add spookify on work project

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                             <p class="attention-getter" data-animate-el>
                                 French japanese man from Perpignan living in the parisian region, i love creating
                                 innovative and modern platforms.
-                                <br />Former member of the judo national team, i used to work as a restaurant manager
+                                <br />Former member of the french national judo team, i used to work as a restaurant
+                                manager
                                 and beer brewer for a few years before deciding to take a turn on my life and focus my
                                 energy on what i like.<br />
                                 I passed my first diploma as a web developper in 2021 (bac+2), and i'm now looking for
@@ -339,6 +340,33 @@
                                     </svg>
                                 </a>
                             </li>
+
+                            <li class="folio-list__item column" data-animate-el>
+                                <a class="folio-list__item-link" href="#modal-03">
+                                    <div class="folio-list__item-pic">
+                                        <img src="images/portfolio/spookify.png"
+                                            srcset="images/portfolio/spookify.png 1x, images/portfolio/spookify.png 2x"
+                                            alt="">
+                                    </div>
+
+                                    <div class="folio-list__item-text">
+                                        <div class="folio-list__item-cat">
+                                            Website Music Streaming
+                                        </div>
+                                        <div class="folio-list__item-title">
+                                            Spotify clone
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="folio-list__proj-link" href="#" title="project link">
+                                    <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                                            fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path>
+                                    </svg>
+                                </a>
+                            </li>
                             <!--end folio-list__item -->
                             <!--end folio-list__item -->
 
@@ -359,7 +387,7 @@
                                     - ReactJS<br />
                                     - Stripe<br />
                                     - Firebase<br />
-                                    - Axios </p>
+                                    - Axios <br />
                                 </p>
                                 <ul class="modal-popup__cat">
                                     <li>E-shop</li>
@@ -381,13 +409,37 @@
                                     - ReactJS<br />
                                     - TMDB API<br />
                                     - Firebase<br />
-                                    -axios </p>
+                                    - Axios<br />
+                                    - Material UI <br />
+                                </p>
                                 <ul class="modal-popup__cat">
                                     <li>Streaming</li>
                                 </ul>
                             </div>
 
                             <a href="https://netclone-14c63.web.app/" target="_blank"
+                                class="modal-popup__details">Project link</a>
+                        </div>
+                    </div> <!-- end modal -->
+
+                    <div id="modal-03" hidden>
+                        <div class="modal-popup">
+                            <img src="images/portfolio/gallery/spookify.png" alt="">
+
+                            <div class="modal-popup__desc">
+                                <h5>Spotify clone</h5>
+                                <p>Build with :<br />
+                                    - ReactJS<br />
+                                    - Spotify API<br />
+                                    - Firebase<br />
+                                    - Material UI
+                                </p>
+                                <ul class="modal-popup__cat">
+                                    <li>Streaming</li>
+                                </ul>
+                            </div>
+
+                            <a href="https://spookify-d4471.web.app/" target="_blank"
                                 class="modal-popup__details">Project link</a>
                         </div>
                     </div> <!-- end modal -->
