add text-shadow text about

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
                                     <h4 class="timeline__title">Greta 93 MTE Noisy-le-Grand</h4>
-                                    <h5 class="timeline__meta">Web and mobile web developper</h5>
+                                    <h5 class="timeline__meta">Web and mobile web developper [bac+2]</h5>
                                     <p class="timeline__timeframe">October 2020 - June 2021</p>
                                 </div>
                                 <div class="timeline__desc">
@@ -414,6 +414,7 @@
                                     - Stripe<br />
                                     - Firebase<br />
                                     - Axios <br />
+                                    - Material UI <br />
                                 </p>
                                 <ul class="modal-popup__cat">
                                     <li>E-shop</li>
@@ -436,7 +437,6 @@
                                     - TMDB API<br />
                                     - Firebase<br />
                                     - Axios<br />
-                                    - Material UI <br />
                                 </p>
                                 <ul class="modal-popup__cat">
                                     <li>Streaming</li>
